start working on the 2. Methods

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -286,3 +286,18 @@
 	Journal = {arXiv preprint arXiv:1410.0759},
 	Title = {cudnn: Efficient primitives for deep learning},
 	Year = {2014}}
+
+@online{projecthydrogensite,
+    author = "Jules Damji",
+    title = "Bay Area Apache Spark Meetup Summary at Databricks HQ",
+    url  = "https://databricks.com/blog/2018/07/25/bay-area-apache-spark-meetup-summary-databricks-hq.html",
+    keywords = "spark,hydrogen"
+}
+
+@online{projecthydrogenpres,
+  author          = {Xiangrui Meng},
+  title           = {Project Hydrogen: State-of-the-Art Deep Learning on Apache Spark},
+  year            = {2018},
+  addendum = "(accessed: 06.10.2020)",
+  url             = {https://www.slideshare.net/databricks/project-hydrogen-stateoftheart-deep-learning-on-apache-spark}
+}
